<resources>
    <string name="app_name">Anigma</string>
    <string name="btn_text_mode">Text mode</string>
    <string name="btn_file_mode">File mode</string>
    <string name="text_mode_input_plaintext">Plaintext</string>
    <string name="text_mode_input_ciphertext">Ciphertext</string>
    <string name="text_mode_input_key">Password (key)</string>
    <string name="text_mode_input_iv">Initialization vector (IV)</string>
    <string name="text_mode_input_random_iv">Generate random</string>
    <string name="text_mode_encrypt_button">Encrypt string</string>
    <string name="text_mode_decrypt_button">Decrypt string</string>
    <string name="file_mode_encrypt_button">Encrypt file</string>
    <string name="file_mode_decrypt_button">Decrypt file</string>
    <string name="text_mode_copy_iv">Copy IV to clipboard</string>
    <string name="text_mode_copy_result">Copy result to clipboard</string>
    <string name="text_mode_encrypted_text">Result</string>
    <string name="mode_encryption_button">Encryption</string>
    <string name="mode_decryption_button">Decryption</string>
    <string name="text_mode_error_encryption">There has been an error during encryption. Try again.</string>
    <string name="text_mode_error_decryption">There has been an error during decryption. Maybe the password is incorrect. Try again.</string>
    <string name="text_mode_error_decoding">There has been an error while decoding plaintext/ciphertext. Maybe the IV is incorrect. Try again.</string>
    <string name="text_mode_error_nothing">Nothing happened. Try again.</string>
    <string name="file_mode_success_encryption">Successfully encrypted file.</string>
    <string name="file_mode_success_decryption">Successfully decrypted file.</string>
    <string name="file_mode_error_encryption">There has been an error during encryption. Try again.</string>
    <string name="file_mode_error_decryption">There has been an error during decryption. Maybe the password is incorrect. Try again.</string>
    <string name="file_mode_error_decoding">There has been an error while decoding file. Maybe the IV is incorrect. Try again.</string>
    <string name="file_mode_error_nothing">Nothing happened. Try again.</string>
    <string name="file_mode_files_helper">Place files in: </string>
</resources>
