<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/ScrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayoutMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnTextMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_text_mode" />

                <Button
                    android:id="@+id/btnFileMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_file_mode" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutTextMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinnerTextAlgo"
                    android:layout_width="395dp"
                    android:layout_height="50dp"
                    android:spinnerMode="dialog"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="222dp" />

                <EditText
                    android:id="@+id/editTextPlainText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/text_mode_input_text"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/text_mode_input_key"
                    android:inputType="text" />

                <LinearLayout
                    android:id="@+id/LinearLayoutIV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <EditText
                        android:id="@+id/editTextIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:ems="10"
                        android:hint="@string/text_mode_input_iv"
                        android:inputType="text"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/btnRndIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_mode_input_random_iv" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutFileMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="invisible">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>